--- a/DadJokes/DadJokes.csproj
+++ b/DadJokes/DadJokes.csproj
@@ -140,8 +140,13 @@
     <Compile Include="Helpers\CountWords.cs" />
     <Compile Include="Helpers\Filter.cs" />
     <Compile Include="Helpers\Sort.cs" />
+    <Compile Include="Models\DisplayJoke.cs" />
     <Compile Include="Models\Joke.cs" />
+    <Compile Include="Models\JokeResponse.cs" />
+    <Compile Include="Models\MultiJokeResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\APIService.cs" />
+    <Compile Include="Services\DadUrl.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -182,7 +187,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
