--- a/DadJokes/DadJokes.csproj
+++ b/DadJokes/DadJokes.csproj
@@ -146,7 +146,7 @@
     <Compile Include="Models\MultiJokeResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\APIService.cs" />
-    <Compile Include="Services\DadUrl.cs" />
+    <Compile Include="Services\DadJokeService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
