--- a/DadJokes/DadJokes.csproj
+++ b/DadJokes/DadJokes.csproj
@@ -145,7 +145,9 @@
     <Compile Include="Models\JokeResponse.cs" />
     <Compile Include="Models\MultiJokeResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\APIInterface.cs" />
     <Compile Include="Services\APIService.cs" />
+    <Compile Include="Services\APIWrapper.cs" />
     <Compile Include="Services\DadJokeService.cs" />
   </ItemGroup>
   <ItemGroup>
